# compiler

./: Dockerfile  README.md  example.txt
scripts/: build.py  build.sh  run.py  run.sh
src/: CMakeLists.txt  copy.c  main.c
src/common/: CMakeLists.txt  defs.h  utils.c  utils.h
src/parser/: CMakeLists.txt  parser.c  parser.h  scanner.c  scanner.h
src/scanner/: CMakeLists.txt  scanner.c  scanner.h
